# observing_transcriber

./: .gitignore  Makefile  README.md  observing_transcriber.spec  pyproject.toml  settings.yaml  watcher.py  whisper_watcher.spec
.github/workflows/: main.yml
